<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        android:id="@+id/resp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resp"
        android:layout_marginStart="@dimen/prob_card_start"
        android:layout_marginTop="@dimen/prob_card_top"
        android:layout_marginEnd="@dimen/prob_card_end"
        android:layout_marginBottom="@dimen/prob_card_bottom"
        app:cardCornerRadius="@dimen/prob_card_radius"
        app:cardElevation="@dimen/prob_card_el">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_color">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_Img"
                android:layout_width="@dimen/circle_img_width"
                android:layout_height="@dimen/circle_img_height"
                android:layout_margin="@dimen/circle_img_margin"
                android:src="@drawable/admin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/linear_height"
                android:layout_toEndOf="@+id/user_Img"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/name_text_color"
                    android:textSize="@dimen/name_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_Img"
                android:padding="@dimen/padding"
                android:text="@string/address"
                android:textSize="@dimen/address_size"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/problem_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/problem_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/problem_Img"
                android:padding="@dimen/desc_padd"
                android:text="@string/description"
                android:textSize="@dimen/desc_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/problem_description"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/comfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTintMode="screen"
                    android:src="@drawable/ic_check_black_24dp" />

                <ImageButton
                    android:id="@+id/post_coment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTintMode="screen"
                    android:src="@drawable/ic_chat_black_24dp" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>